Song endpoint/fix presentation size issue

--- a/app/templates/song/play.hbs
+++ b/app/templates/song/play.hbs
@@ -1,5 +1,7 @@
 <div class="slides">
-  {{#each lyric}}
-    <section>{{this}}</section>
+  {{#each orderedLyric}}
+    <section>
+      <p>{{this}}</p>
+    </section>
   {{/each}}
-</div
+</div>
