--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,4 +1,9 @@
-/* Put your CSS here */
-html, body {
-    margin: 30px 0;
+#application,
+#song {
+  position: relative;
+  height: 100%;
+}
+
+#song .slides section p {
+  white-space: pre-line;
 }
