Use mongo + make some things work

--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Sails & Ember</title>
+    <title>Lyrical</title>
     <!--STYLES-->
     <link rel="stylesheet" href="/linker/styles/styles.css">
     <!--STYLES END-->
@@ -14,15 +14,15 @@
     <script src="/linker/components/ember-data/ember-data.js"></script>
     <script src="/linker/compiled/templates.js"></script>
     <script src="/linker/js/app.js"></script>
-    <script src="/linker/js/controllers/IndexController.js"></script>
-    <script src="/linker/js/controllers/SearchResultsController.js"></script>
-    <script src="/linker/js/serializers/ApplicationSerializer.js"></script>
-    <script src="/linker/js/adapters/ApplicationAdapter.js"></script>
-    <script src="/linker/js/models/Song.js"></script>
-    <script src="/linker/js/routes/IndexRoute.js"></script>
-    <script src="/linker/js/routes/SearchResultsRoute.js"></script>
+    <script src="/linker/js/controllers/index.js"></script>
+    <script src="/linker/js/controllers/searchResults.js"></script>
+    <script src="/linker/js/serializers/application.js"></script>
+    <script src="/linker/js/adapters/application.js"></script>
+    <script src="/linker/js/models/song.js"></script>
+    <script src="/linker/js/routes/index.js"></script>
+    <script src="/linker/js/routes/search_results.js"></script>
     <script src="/linker/js/router.js"></script>
-    <script src="/linker/js/views/IndexView.js"></script>
+    <script src="/linker/js/views/index.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
